syntax="proto3";
package services;
option go_package=".;services";
message ProductRequest {
    int32 prod_id = 1; // 传入的商品ID
}
message ProdResponse {
    int32 prod_stock=1;// 商品库存
}
service ProdService {
    rpc GetProdStock(ProductRequest) returns (ProdResponse);
}

// 加入 service 后
// protoc --go_out=plugins=grpc:../services Product.proto